--- a/phi-utils.cabal
+++ b/phi-utils.cabal
@@ -25,13 +25,35 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      Lambda.Model
+      Lambda.Pretty
+      Phi.Minimal
+      Phi.Minimal.ConfigurationDot
+      Phi.Minimal.EO.Pretty
+      Phi.Minimal.Graph
+      Phi.Minimal.Machine.CallByName
+      Phi.Minimal.Machine.CallByName.Graph
+      Phi.Minimal.Model
+      Phi.Minimal.Parser
+      Phi.Minimal.Pretty
+      Phi.Minimal.Translation.Lambda
+      Phi.Utils.GraphBuilder
   other-modules:
       Paths_phi_utils
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , containers
+    , fgl
+    , graphviz
+    , insert-ordered-containers
+    , mtl
+    , parsers
+    , prettyprinter
+    , text
+    , trifecta
+    , unordered-containers
   default-language: Haskell2010
 
 executable phi-utils-exe
@@ -43,7 +65,17 @@ executable phi-utils-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
+    , fgl
+    , graphviz
+    , insert-ordered-containers
+    , mtl
+    , parsers
     , phi-utils
+    , prettyprinter
+    , text
+    , trifecta
+    , unordered-containers
   default-language: Haskell2010
 
 test-suite phi-utils-test
@@ -56,5 +88,15 @@ test-suite phi-utils-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
+    , fgl
+    , graphviz
+    , insert-ordered-containers
+    , mtl
+    , parsers
     , phi-utils
+    , prettyprinter
+    , text
+    , trifecta
+    , unordered-containers
   default-language: Haskell2010
