--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "private": true,
   "devDependencies": {
+    "buffer": "^6.0.3",
     "gh-pages": "^4.0.0",
     "parcel": "2.5.0",
+    "process": "^0.11.10",
     "purescript": "^0.15.2",
-    "spago": "^0.20.9"
+    "spago": "^0.20.9",
+    "util": "^0.12.4"
   },
   "scripts": {
     "build": "spago build",
