--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "deploy": "npm run build-prod && mkdir -p docs && cp dev/* docs && esbuild --minify prod/index.js --outfile=docs/index.js && gh-pages -d docs"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
+    "bootstrap": "^5.1.3",
     "esbuild": "^0.14.43"
   }
 }
