--- a/try-phi-language-utils.cabal
+++ b/try-phi-language-utils.cabal
@@ -30,9 +30,10 @@ custom-setup
 library
   exposed-modules:
       Common
-      EO.Test
+      Test
   other-modules:
-      EO.EOtoPhi
+      EOtoPhi
+      PhiToEO
       Paths_try_phi_language_utils
   hs-source-dirs:
       src
@@ -45,6 +46,7 @@ library
     , insert-ordered-containers
     , megaparsec
     , phi-utils
+    , prettyprinter
     , text
   default-language: Haskell2010
 
@@ -63,6 +65,7 @@ executable try-phi-language-utils
     , insert-ordered-containers
     , megaparsec
     , phi-utils
+    , prettyprinter
     , text
     , try-phi-language-utils
   default-language: Haskell2010
@@ -84,6 +87,7 @@ test-suite doctests
     , insert-ordered-containers
     , megaparsec
     , phi-utils
+    , prettyprinter
     , template-haskell
     , text
   default-language: Haskell2010
@@ -106,6 +110,7 @@ test-suite spec
     , insert-ordered-containers
     , megaparsec
     , phi-utils
+    , prettyprinter
     , text
     , try-phi-language-utils
   default-language: Haskell2010
