partially fix eo to phi

--- a/package.yaml
+++ b/package.yaml
@@ -21,7 +21,7 @@ dependencies:
   - eo-utils
   - fgl
   - insert-ordered-containers
-  # - lucid
+  - pretty-simple
   - phi-utils
   - prettyprinter
   - text
