--- a/try-phi-language-utils.cabal
+++ b/try-phi-language-utils.cabal
@@ -46,6 +46,7 @@ library
     , insert-ordered-containers
     , megaparsec
     , phi-utils
+    , pretty-simple
     , prettyprinter
     , text
   default-language: Haskell2010
@@ -65,6 +66,7 @@ executable try-phi-language-utils
     , insert-ordered-containers
     , megaparsec
     , phi-utils
+    , pretty-simple
     , prettyprinter
     , text
     , try-phi-language-utils
@@ -87,6 +89,7 @@ test-suite doctests
     , insert-ordered-containers
     , megaparsec
     , phi-utils
+    , pretty-simple
     , prettyprinter
     , template-haskell
     , text
@@ -110,6 +113,7 @@ test-suite spec
     , insert-ordered-containers
     , megaparsec
     , phi-utils
+    , pretty-simple
     , prettyprinter
     , text
     , try-phi-language-utils
