--- a/back/language-utils/language-utils.cabal
+++ b/back/language-utils/language-utils.cabal
@@ -4,11 +4,11 @@ cabal-version: 1.24
 --
 -- see: https://github.com/sol/hpack
 
-name:           try-phi-language-utils
+name:           language-utils
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/fizruk/try-phi#readme>
-homepage:       https://github.com/br4ch1st0chr0n3/try-phi-language-utils#readme
-bug-reports:    https://github.com/br4ch1st0chr0n3/try-phi-language-utils/issues
+homepage:       https://github.com/br4ch1st0chr0n3/language-utils#readme
+bug-reports:    https://github.com/br4ch1st0chr0n3/language-utils/issues
 author:         Nikolai Kudasov, Danila Danko
 maintainer:     nickolay.kudasov@gmail.com, br4ch1st0chr0n3@gmail.com
 copyright:      2021 Nikolai Kudasov
@@ -19,7 +19,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/br4ch1st0chr0n3/try-phi-language-utils
+  location: https://github.com/br4ch1st0chr0n3/language-utils
 
 custom-setup
   setup-depends:
@@ -34,7 +34,7 @@ library
   other-modules:
       EOtoPhi
       PhiToEO
-      Paths_try_phi_language_utils
+      Paths_language_utils
   hs-source-dirs:
       src
   ghc-options: -Wall -fno-warn-type-defaults -O2
@@ -51,10 +51,10 @@ library
     , text
   default-language: Haskell2010
 
-executable try-phi-language-utils
+executable language-utils
   main-is: Main.hs
   other-modules:
-      Paths_try_phi_language_utils
+      Paths_language_utils
   hs-source-dirs:
       app
   ghc-options: -Wall -fno-warn-type-defaults -O2 -threaded -rtsopts -with-rtsopts=-N
@@ -64,12 +64,12 @@ executable try-phi-language-utils
     , eo-utils
     , fgl
     , insert-ordered-containers
+    , language-utils
     , megaparsec
     , phi-utils
     , pretty-simple
     , prettyprinter
     , text
-    , try-phi-language-utils
   default-language: Haskell2010
 
 test-suite doctests
@@ -99,7 +99,7 @@ test-suite spec
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Paths_try_phi_language_utils
+      Paths_language_utils
   hs-source-dirs:
       test
   ghc-options: -Wall -fno-warn-type-defaults -O2 -threaded -rtsopts -with-rtsopts=-N
@@ -111,10 +111,10 @@ test-suite spec
     , fgl
     , hspec
     , insert-ordered-containers
+    , language-utils
     , megaparsec
     , phi-utils
     , pretty-simple
     , prettyprinter
     , text
-    , try-phi-language-utils
   default-language: Haskell2010
