--- a/back/language-utils/package.yaml
+++ b/back/language-utils/package.yaml
@@ -1,6 +1,6 @@
-name: try-phi-language-utils
+name: language-utils
 version: 0.1.0.0
-github: br4ch1st0chr0n3/try-phi-language-utils
+github: br4ch1st0chr0n3/language-utils
 license: BSD3
 author: Nikolai Kudasov, Danila Danko
 maintainer: nickolay.kudasov@gmail.com, br4ch1st0chr0n3@gmail.com
@@ -14,7 +14,7 @@ custom-setup:
     - Cabal
     - cabal-doctest >=1.0.2 && <1.1
 ghc-options:
-  - '-Wall -fno-warn-type-defaults -O2'
+  - "-Wall -fno-warn-type-defaults -O2"
 dependencies:
   - base >= 4.7 && < 5
   - directory
@@ -26,33 +26,33 @@ dependencies:
   - prettyprinter
   - text
   - megaparsec
-  
+
 library:
   source-dirs: src
   exposed-modules:
-  - Common
-  - Test
+    - Common
+    - Test
 executables:
-  try-phi-language-utils:
+  language-utils:
     main: Main.hs
     source-dirs: app
     ghc-options:
-      - '-threaded'
-      - '-rtsopts'
-      - '-with-rtsopts=-N'
+      - "-threaded"
+      - "-rtsopts"
+      - "-with-rtsopts=-N"
     dependencies:
-    - try-phi-language-utils
+      - language-utils
 
 tests:
   spec:
     main: Spec.hs
     source-dirs: test
     ghc-options:
-      - '-threaded'
-      - '-rtsopts'
-      - '-with-rtsopts=-N'
+      - "-threaded"
+      - "-rtsopts"
+      - "-with-rtsopts=-N"
     dependencies:
-      - try-phi-language-utils
+      - language-utils
       - hspec
       - QuickCheck
   doctests:
