--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -54,6 +54,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3.7.3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs
+          # example with a default working dir and a publish dir
+          # https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
+          publish_dir: ./front/docs
           force_orphan: true
-
