--- a/front/package.json
+++ b/front/package.json
@@ -11,15 +11,22 @@
   },
   "scripts": {
     "build": "spago build",
-    "init": "npm i && npm run build",
-    "test": "spago test",
     "dev": "parcel dev/index.html --open",
-    "build-prod": "mkdir -p prod && cp dev/index.html prod/ && rm -rf dist && spago bundle-app --to prod/index.js && parcel build prod/index.html",
-    "deploy": "npm run build-prod && mkdir -p docs && cp dev/* docs && esbuild --minify prod/index.js --outfile=docs/index.js && gh-pages -d docs"
+    "test": "spago test",
+    "prequick-start": "npm i",
+    "quick-start": "npm run build",
+    "postquick-start": "npm run dev",
+    "prebuild:min": "npm i && rm -rf min && mkdir min && cp dev/* min/",
+    "build:min": "spago bundle-app --to min/index.js --minify && parcel build min/index.html",
+    "build:gh-pages": "npm run build:min && cp -TR min docs",
+    "build:prod": "npm run build:min && cp -TR min prod",
+    "postbuild:prod": "npx http-server prod -o"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
-    "esbuild": "^0.14.43"
+    "esbuild": "^0.14.43",
+    "http-server": "^14.1.1",
+    "npx": "^10.2.2"
   }
 }
