--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -44,11 +44,7 @@ jobs:
         run: npm install
 
       - name: Build the project
-        run: |
-          npm run build-prod
-          mkdir -p docs
-          cp dev/* docs
-          npx esbuild --minify prod/index.js --outfile=docs/index.js
+        run: npm run build-gh-pages
       
       - name: GitHub Pages action
         uses: peaceiris/actions-gh-pages@v3.7.3
