--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "build": "spago build",
     "dev": "parcel dev/index.html --open",
     "test": "spago test",
-    "build:init": "npm i && npm run build",
     "prequick-start": "npm i",
     "quick-start": "npm run build",
     "postquick-start": "npm run dev",
@@ -23,11 +22,6 @@
     "build:prod": "npm run build:min && cp -TR min prod",
     "postbuild:prod": "npx http-server prod -o"
   },
-  "dependencies": {
-    "@popperjs/core": "^2.11.5",
-    "bootstrap": "^5.1.3",
-    "esbuild": "^0.14.43",
-    "http-server": "^14.1.1",
-    "npx": "^10.2.2"
+  "dependencies": { "npx": "^10.2.2"
   }
 }
