--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -1,4 +1,4 @@
-name: Front CI
+name: Deploy front end
 
 on:
   push:
@@ -44,7 +44,7 @@ jobs:
         run: npm install
 
       - name: Build the project
-        run: npm run build-gh-pages
+        run: npm run build:gh-pages
       
       - name: GitHub Pages action
         uses: peaceiris/actions-gh-pages@v3.7.3
