--- a/back/try-phi-back.cabal
+++ b/back/try-phi-back.cabal
@@ -56,7 +56,7 @@ executable try-phi-back-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
-    , base
+    , base >=4.7 && <5
     , either
     , eo-utils
     , language-utils
