--- a/back/language-utils/phi-utils/stack.yaml
+++ b/back/language-utils/phi-utils/stack.yaml
@@ -17,8 +17,10 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/18/28.yaml
+# resolver:
+#   url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts//28.yaml
+# resolver: nightly-2022-08-04
+resolver: lts-19.18
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -30,7 +32,7 @@ resolver:
 #   - auto-update
 #   - wai
 packages:
-- .
+  - .
 # Dependency packages to be pulled from upstream that are not in the resolver.
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
@@ -43,8 +45,7 @@ packages:
 # extra-deps: []
 
 ghc-options:
-  '$everything': -haddock
-
+  "$everything": -haddock
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
