--- a/back/language-utils/stack.yaml
+++ b/back/language-utils/stack.yaml
@@ -15,11 +15,11 @@
 # The location of a snapshot can be provided as a file or url. Stack assumes
 # a snapshot provided as a file might change, whereas a url resource does not.
 #
-# resolver: ./custom-snapshot.yaml
+# resolver: nightly-2022-08-04
+resolver: lts-19.18
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/18/28.yaml
-
+# resolver:
+# url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/18/28.yaml
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -31,18 +31,16 @@ resolver:
 #   - auto-update
 #   - wai
 packages:
-- eo-utils
-- phi-utils
-- .
+  - eo-utils
+  - phi-utils
+  - .
 
 # Dependency packages to be pulled from upstream that are not in the resolver.
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
 
-
 ghc-options:
-  '$everything': -haddock
-
+  "$everything": -haddock
 # flags:
 #   miso:
 #     jsaddle: true
