--- a/back/try-phi-back.cabal
+++ b/back/try-phi-back.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.4.
+-- This file has been generated from package.yaml by hpack version 0.34.7.
 --
 -- see: https://github.com/sol/hpack
 
@@ -33,8 +33,10 @@ library
   build-depends:
       aeson
     , base >=4.7 && <5
+    , bytestring
     , either
     , eo-utils
+    , graphviz
     , language-utils
     , phi-utils
     , random
@@ -57,8 +59,10 @@ executable try-phi-back-exe
   build-depends:
       aeson
     , base >=4.7 && <5
+    , bytestring
     , either
     , eo-utils
+    , graphviz
     , language-utils
     , phi-utils
     , random
@@ -83,8 +87,10 @@ test-suite try-phi-back-test
   build-depends:
       aeson
     , base
+    , bytestring
     , either
     , eo-utils
+    , graphviz
     , hspec
     , hspec-wai
     , hspec-wai-json
