--- a/back/language-utils/eo-utils/package.yaml
+++ b/back/language-utils/eo-utils/package.yaml
@@ -23,7 +23,7 @@ custom-setup:
   dependencies:
     - base
     - Cabal
-    - cabal-doctest >=1.0.2 && <1.1
+    # - cabal-doctest >=1.0.2 && <1.1
 
 ghc-options:
   - -Wall -fno-warn-type-defaults -O2
@@ -70,13 +70,13 @@ tests:
       - hspec
       - QuickCheck
 
-  doctests:
-    source-dirs: test
-    main: doctests.hs
-    other-modules: []
-    dependencies:
-      - base
-      - doctest
-      - Glob
-      - QuickCheck
-      - template-haskell
+  # doctests:
+  #   source-dirs: test
+  #   main: doctests.hs
+  #   other-modules: []
+  #   dependencies:
+  #     - base
+  #     - doctest
+  #     - Glob
+  #     - QuickCheck
+  #     - template-haskell
