--- a/back/language-utils/language-utils.cabal
+++ b/back/language-utils/language-utils.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.24
 
--- This file has been generated from package.yaml by hpack version 0.34.5.
+-- This file has been generated from package.yaml by hpack version 0.34.7.
 --
 -- see: https://github.com/sol/hpack
 
@@ -25,7 +25,6 @@ custom-setup
   setup-depends:
       Cabal
     , base
-    , cabal-doctest >=1.0.2 && <1.1
 
 library
   exposed-modules:
@@ -51,7 +50,7 @@ library
     , text
   default-language: Haskell2010
 
-executable language-utils
+executable language-utils-exe
   main-is: Main.hs
   other-modules:
       Paths_language_utils
@@ -69,29 +68,6 @@ executable language-utils
     , phi-utils
     , pretty-simple
     , prettyprinter
-    , text
-  default-language: Haskell2010
-
-test-suite doctests
-  type: exitcode-stdio-1.0
-  main-is: doctests.hs
-  hs-source-dirs:
-      test
-  ghc-options: -Wall -fno-warn-type-defaults -O2
-  build-depends:
-      Glob
-    , QuickCheck
-    , base
-    , directory
-    , doctest
-    , eo-utils
-    , fgl
-    , insert-ordered-containers
-    , megaparsec
-    , phi-utils
-    , pretty-simple
-    , prettyprinter
-    , template-haskell
     , text
   default-language: Haskell2010
 
