--- a/back/language-utils/package.yaml
+++ b/back/language-utils/package.yaml
@@ -12,7 +12,7 @@ custom-setup:
   dependencies:
     - base
     - Cabal
-    - cabal-doctest >=1.0.2 && <1.1
+    # - cabal-doctest >=1.0.2 && <1.1
 ghc-options:
   - "-Wall -fno-warn-type-defaults -O2"
 dependencies:
@@ -55,13 +55,13 @@ tests:
       - language-utils
       - hspec
       - QuickCheck
-  doctests:
-    source-dirs: test
-    main: doctests.hs
-    other-modules: []
-    dependencies:
-      - base
-      - doctest
-      - Glob
-      - QuickCheck
-      - template-haskell
+  # doctests:
+  #   source-dirs: test
+  #   main: doctests.hs
+  #   other-modules: []
+  #   dependencies:
+  #     - base
+  #     - doctest
+  #     - Glob
+  #     - QuickCheck
+  #     - template-haskell
