--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "private": true,
+  "engines" : { 
+    "npm" : ">=8.0.0",
+    "node" : ">=16.0.0"
+  },
   "devDependencies": {
     "buffer": "^6.0.3",
     "gh-pages": "^4.0.0",
