--- a/back/try-phi-back.cabal
+++ b/back/try-phi-back.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.5.
+-- This file has been generated from package.yaml by hpack version 0.34.7.
 --
 -- see: https://github.com/sol/hpack
 
@@ -30,6 +30,7 @@ library
       Paths_try_phi_back
   hs-source-dirs:
       src
+  ghc-options: -Wunused-packages
   build-depends:
       aeson
     , base >=4.7 && <5
@@ -55,7 +56,7 @@ executable try-phi-back-exe
       Paths_try_phi_back
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wunused-packages -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
     , base >=4.7 && <5
@@ -63,37 +64,6 @@ executable try-phi-back-exe
     , either
     , eo-utils
     , graphviz
-    , language-utils
-    , phi-utils
-    , random
-    , servant-server
-    , string-random
-    , text
-    , transformers
-    , try-phi-back
-    , wai
-    , wai-cors
-    , warp
-  default-language: Haskell2010
-
-test-suite try-phi-back-test
-  type: exitcode-stdio-1.0
-  main-is: Spec.hs
-  other-modules:
-      Paths_try_phi_back
-  hs-source-dirs:
-      test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      aeson
-    , base
-    , bytestring
-    , either
-    , eo-utils
-    , graphviz
-    , hspec
-    , hspec-wai
-    , hspec-wai-json
     , language-utils
     , phi-utils
     , random
