--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,10 @@
   },
   "devDependencies": {
     "buffer": "^6.0.3",
+    "esbuild": "^0.14.43",
     "gh-pages": "^4.0.0",
+    "http-server": "^14.1.1",
+    "npx": "^10.2.2",
     "parcel": "2.5.0",
     "process": "^0.11.10",
     "util": "^0.12.4"
@@ -28,9 +31,6 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.5",
-    "bootstrap": "^5.1.3",
-    "esbuild": "^0.14.43",
-    "http-server": "^14.1.1",
-    "npx": "^10.2.2"
+    "bootstrap": "^5.1.3"
   }
 }
