--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -8,18 +8,45 @@ on:
 jobs:
   build:
     defaults:
-        run:
-          working-directory: front
-    runs-on: ubuntu-latest
-
+      run:
+        working-directory: front
+    strategy:
+      matrix:
+        os: [ubuntu-22.04]
+          # [ubuntu-20.04, ubuntu-22.04, macos-11, macos-12]
+        cache: [br4ch1st0chr0n3-nix-managed]
+    runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
+      # Nix
+      - uses: actions/checkout@v3
+      - uses: cachix/install-nix-action@v17
+        with:
+          extra_nix_config: |
+            access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+            substituters = https://br4ch1st0chr0n3-nix-managed.cachix.org https://br4ch1st0chr0n3-acpoj.cachix.org https://br4ch1st0chr0n3-flakes.cachix.org https://cache.nixos.org/ https://hydra.iohk.io https://nix-community.cachix.org
+            trusted-public-keys = br4ch1st0chr0n3-nix-managed.cachix.org-1:sDKsfgu5fCCxNwVhZg+AWeGvbLlEtZoyzkSNKRM/KAo= br4ch1st0chr0n3-acpoj.cachix.org-1:OYzTMty0XgyEIcm+o9tjKotr9ZjNeC4JCWmc0P0nx3U= br4ch1st0chr0n3-flakes.cachix.org-1:Dyc2yLlRIkdbq8CtfOe24QQhQVduQaezkyV8J9RhuZ8= cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
+      # - uses: cachix/cachix-action@v10
+      #   with:
+      #     name: ${{ matrix.cache }}
+      #     authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+      # - name: Push inputs to cachix
+      #   run: |
+      #     # https://docs.cachix.org/pushing#flakes
 
+      #     nix flake archive --json \
+      #       | jq -r '.path,(.inputs|to_entries[].value.path)' \
+      #       | cachix push ${{ matrix.cache }}
+      # - name: Push devshell to cachix
+      #   run: |
+      #     nix develop --profile dev-profile
+      #     cachix push ${{ matrix.cache }} dev-profile
+      
+      # Node
+      - uses: actions/checkout@v3
       - name: Set up Node toolchain
         uses: actions/setup-node@v1
         with:
           node-version: "16.x"
-
       - name: Cache PureScript dependencies
         uses: actions/cache@v2
         with:
@@ -27,7 +54,6 @@ jobs:
           path: |
             .spago
             output
-
       - name: Cache NPM dependencies
         uses: actions/cache@v2
         env:
@@ -39,13 +65,13 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-
       - name: Install NPM dependencies
         run: npm install
-
       - name: Build the project
-        run: npm run build:gh-pages
-      
+        run: |
+          nix develop
+          npm run build:gh-pages
+
       - name: GitHub Pages action
         uses: peaceiris/actions-gh-pages@v3.7.3
         with:
