--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,11 +84,18 @@ jobs:
       #   run: |
       #     nix develop --profile dev-profile
       #     cachix push ${{ matrix.cache }} dev-profile
-      - name: Build app
+      - name: Build with Nix
         run: |
           cd back
           nix develop
-          cp $(which back) ./back
+          which back
+          # cp $(which back) ./back
+      - name: Build with stack
+        run: |
+          cd back
+          stack build
+          readlink result/bin/back
+          # cp $(readlink result/bin/back) .
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
