--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,15 +88,14 @@ jobs:
         run: |
           cd back
           nix-shell
-          # nix develop
           which back
-          # cp $(which back) ./back
-      - name: Build with stack
-        run: |
-          cd back
-          stack build
-          readlink result/bin/back
-          cp $(readlink result/bin/back) .
+          cp $(which back) ./back
+      # - name: Build with stack
+      #   run: |
+      #     cd back
+      #     stack build
+      #     readlink result/bin/back
+      #     cp $(readlink result/bin/back) .
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
