--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,9 +88,11 @@ jobs:
       - name: Build with Nix
         run: |
           cd back
-          nix-shell
-          which back
-          cp $(which back) ./back
+          nix build
+          # nix develop
+          # nix-shell
+          # which back
+          # cp $(which back) ./back
       # - name: Build with stack
       #   run: |
       #     cd back
