use default dir

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,9 +56,9 @@ jobs:
           force_orphan: true
 
   back:
-    # defaults:
-    #   run:
-    #     working-directory: back
+    defaults:
+      run:
+        working-directory: back
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
